--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,54 @@
   text-align: center;
 }
 
+body {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+  background-color: rgb(159, 110, 51);
+  padding: 2rem;
+  border-radius: 20px;
+}
+.contactList {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  border: 1px solid white;
+  border-radius: 15px;
+  padding: 1rem;
+  column-gap: 1rem;
+  height: auto;
+}
+.contactList button {
+  display: flex;
+  border-radius: 100%;
+  border: 2px solid rgb(88, 87, 87);
+  color: rgb(88, 87, 87);
+  font-weight: bold;
+  background-color: white;
+  width: 2.5rem;
+  height: 2.5rem;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.contactList img {
+  width: 60px;
+  height: 60px;
+  border: 2px solid rgb(88, 87, 87);
+  border-radius: 100%;
+}
+
+.contactList p {
+  font-size: 1.2rem;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
