--- a/src/components/ContactUnfolded.css
+++ b/src/components/ContactUnfolded.css
@@ -12,6 +12,10 @@
 }
 
 .objectEnlarge img {
+  width: 40vw;
+  height: 40vh;
+  object-fit: cover;
+  object-position: center;
   border-radius: 100%;
 }
 .objectEnlarge p {
