--- a/src/components/ContactUnfolded.css
+++ b/src/components/ContactUnfolded.css
@@ -12,10 +12,9 @@
 }
 
 .objectEnlarge img {
-  width: 40vw;
-  height: 40vh;
+  width: 20vw;
+  height: 20vw;
   object-fit: cover;
-  object-position: center;
   border-radius: 100%;
 }
 .objectEnlarge p {
